Gave the SVG icons more edge space to prevent cutoff on mobile

--- a/styles.css
+++ b/styles.css
@@ -1104,9 +1104,9 @@ dialog {
 }
 
 svg.share-icon {
-  height: 0.8em;
+  height: 0.9em;
   margin-top: 0.1em;
-  margin-right: 12px;
+  margin-right: 10px;
 }
 
 #dailyChallengeDialog {
